SignIn & SignUp pages with Private routes protection

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,6 +23,8 @@
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": "warn",
     "import/no-unresolved": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
