--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,8 @@
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "implicit-arrow-linebreak": "off",
+    "no-underscore-dangle": "off"
   }
 }
