--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -12,8 +13,6 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.34",
     "axios": "^0.24.0",
-    "js-cookie": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -25,9 +24,9 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2",
-    "winston": "^3.3.3"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,13 +47,10 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.176",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.2",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^7.32.0",
