--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -19,6 +19,7 @@
     "import/prefer-default-export": "off",
     "operator-linebreak": "off",
     "no-underscore-dangle": "off",
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
