--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts src/",
-    "start": "nodemon --config nodemon.json src/app.ts"
+    "start": "nodemon --config nodemon.json src/app.ts",
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -21,26 +22,35 @@
     "mongoose": "^5.13.12",
     "pino": "^7.0.5",
     "pino-pretty": "^7.1.0",
+    "set-cookie-parser": "^2.4.8",
     "winston": "^3.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/bcrypt": "^5.0.0",
     "@types/config": "0.0.39",
     "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.176",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.4",
+    "@types/set-cookie-parser": "^2.4.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
+    "jasmin": "0.0.2",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.14",
+    "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
