--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -27,6 +27,7 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "implicit-arrow-linebreak": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "function-paren-newline": "off"
   }
 }
